--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,10 @@
     <nav>
         <ul>
             <li>
-                <a href="index.html">Home</a>
+                <a href="/">Home</a>
             </li>
             <li>
-                <a href="about.html">About</a>
+                <a href="/about/">About</a>
             </li>
         </ul>
     </nav>
