--- a/src/contact.html
+++ b/src/contact.html
@@ -10,20 +10,8 @@
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <li>
-                <a href="/">Home</a>
-            </li>
-            <li>
-                <a href="/about/">About</a>
-            </li>
-            <li>
-                <a href="/contact/">Contact</a>
-            </li>
-        </ul>
-    </nav>
-    <h1>About page</h1>
+    <header class="header"></header>
+    <h1>Contact page</h1>
 
     <script src="./assets/js/index.js"></script>
 </body>
