--- a/src/index.html
+++ b/src/index.html
@@ -8,19 +8,7 @@
     <link rel="stylesheet" href="./assets/styles/app.scss">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li>
-                <a href="/">Home</a>
-            </li>
-            <li>
-                <a href="/about/">About</a>
-            </li>
-            <li>
-                <a href="/contact/">Contact</a>
-            </li>
-        </ul>
-    </nav>
+    <header class="header"></header>
     <h1>Home page</h1>
 
     <script src="./assets/js/index.js"></script>
